--- a/public/style.css
+++ b/public/style.css
@@ -17,20 +17,31 @@
 }
 
 .imgPaint,
-.imgErase {
+.imgErase,
+.imgLink,
+.imgVoid,
+.imgSave {
     width: 40px;
     height: 40px;
     cursor: pointer;
+    margin-left: 30px;
 }
 
 .colorChoose {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.imageChoose {
+    z-index: -1;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0;
-    cursor: pointer;
 }
 
 .divHerramientas {
@@ -38,4 +49,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+}
+
+.canvas {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+
 }
