--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,8 @@
 .canvas {
     background-color: white;
-    width: 100%;
+    width: 206vh;
     margin: 0;
-    height: 97vh;
+    height: 86vh;
     border: 5px solid grey;
     display: flex;
     justify-content: center;
@@ -20,7 +20,8 @@
 .imgErase,
 .imgLink,
 .imgVoid,
-.imgSave {
+.imgSave,
+.imgFill {
     width: 40px;
     height: 40px;
     cursor: pointer;
@@ -57,4 +58,26 @@
     align-items: center;
     justify-items: center;
 
+}
+
+.divVoid {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip {
+    visibility: hidden;
+    width: 120px; /* Ancho del tooltip */
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%; /* Posición del tooltip */
+    left: 50%;
+    margin-left: -60px; /* Centrar el tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
 }
