Pluma, Hacer Interfaz

--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,8 @@
 .imgVoid,
 .imgSave,
 .imgFill,
-.dropdownItem {
+.dropdownItem,
+.imgSelect {
     width: 40px;
     height: 40px;
     cursor: pointer;
